<resources>
    <string name="app_name">Licious</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="skip">Skip</string>
    <string name="sign_in_sign_up">Sign In/Sign Up</string>
    <string name="sign_in_mandatory">This is mandatory in order to complete checkout and stand a chance to get rewarded!</string>
    <string name="proceed">PROCEED VIA OTP</string>
    <string name="signin_agreement">By signing in you agree to our</string>
    <string name="terms">terms and conditions</string>
    <string name="otp_sent">An OTP has been sent to your Mobile Number</string>
    <string name="confirm">Confirm OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="edit_number">EDIT NUMBER</string>
    <string name="resend">RESEND</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="click_to_see_video">Click to see video</string>
    <string name="delivery_time">Delivery time</string>
    <string name="bengalore">Bangalore</string>
    <string name="bengalore_karnataka">Bangalore, Karnataka</string>
    <string name="navigation_drawrer_open">open navigation drawer</string>
    <string name="navigation_drawrer_close">close navigation drawer</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="choose_your_delivery_location">YourCart</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="String1">At Licious, we work closely with our farmers to ensure the best ethically-raised breeds that are administered nutrient-rich feed under stringent biosecurity protocols. Utmost care at the source is what sets our quality beyond ordinary.</string>
    <string name="String2">Our first-of-its-kind world-class production unit is temperature controlled to maintain natural goodness and nutrients. We adhere to highest quality standards by combining meat science and artisanal butchery.</string>
    <string name="String3"><![CDATA[Our highly qualified team of doctors & chefs strictly comply with the FSSAI hygiene standards for handling & processing to offer you premium grade gourmet meat, fish and seafood products.]]></string>
    <string name="String4">Day’s cut lamb and chicken from our farms, and day’s catch seafood straight from the coast, delivered chilled and not frozen so you get meat as fresh as it can get.</string>
    <string name="String5"><![CDATA[Our premium meat, fish and seafood products are cleaned, wastage-free & cook faster with minimum moisture loss so you get more value for your money.]]></string>

    <string name="choose_delivery_location">Choose your delivery location</string>
    <string name="order_freshest_meat"><![CDATA[Order the Freshest Chicken Mutton, Seafood & Eggs]]></string>
    <string name="search_delivery_location">Search for your delivery location</string>
    <string name="or">Or</string>
    <string name="use_my_location">Use my location</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="notifications">Notifications</string>
    <string name="fish_and_seafood"><![CDATA[Fish & Seafood]]></string>
    <string name="explore">Explore by category</string>
    <string name="your_cart">Your Cart</string>

</resources>