<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".LiciousWay">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#2C2A2A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Licious Way"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageButton
        android:id="@+id/igBackbtn"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#2C2A2A"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitebacksvg" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="659dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="@dimen/dp_2"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_90"
                   android:layout_marginBottom="140dp"
                    android:layout_marginStart="@dimen/dp_20"
                    android:background="@drawable/lineshape"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="90dp"
                    android:background="@drawable/circle"
                    android:padding="@dimen/dp_10"
                    android:text="1"
                    android:layout_marginStart="@dimen/dp_7"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="410dp"
                    android:background="@drawable/circle"
                    android:padding="@dimen/dp_10"
                    android:text="2"
                    android:layout_marginStart="@dimen/dp_7"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text2"
                    android:layout_marginTop="310dp"
                    android:background="@drawable/circle"
                    android:padding="@dimen/dp_10"
                    android:text="3"
                    android:layout_marginStart="@dimen/dp_7"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text3"
                    android:layout_marginTop="290dp"
                    android:background="@drawable/circle"
                    android:padding="@dimen/dp_10"
                    android:text="4"
                    android:layout_marginStart="@dimen/dp_7"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text4"
                    android:layout_marginTop="310dp"
                    android:background="@drawable/circle"
                    android:padding="@dimen/dp_10"
                    android:text="5"
                    android:layout_marginStart="@dimen/dp_7"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:src="@drawable/pic1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Premium produce, sourced directly from the origin"
                    android:textColor="#ee5150" />

                <TextView
                    android:id="@+id/tvtxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:text="@string/String1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:src="@drawable/pic2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Scientifically designed Central Production Unit"
                    android:textColor="#ee5150" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:text="@string/String2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:src="@drawable/pic3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Compliance to 150 stringent quality checks."
                    android:textColor="#ee5150" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:text="@string/String3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:src="@drawable/pic4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delivered fresh every day"
                    android:textColor="#ee5150" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:text="@string/String4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:src="@drawable/pic5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Experience extraordinary cooking"
                    android:textColor="#ee5150" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:text="@string/String5" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>